<resources>
    <string name="load">加载中…</string>



    <string name="home">首页</string>
    <string name="chat">交流</string>
    <string name="attendance">考勤</string>
    <string name="distribution">分布</string>
    <string name="mine">我的</string>


    <string name="LOGIN_NAME">login_name</string>
    <string name="LOGIN_PWD">login_pwd</string>
    <string name="LOGIN_PHONE">login_phone</string>
    <string name="USERID">userid</string>
    <string name="COMPANYID">companyid</string>
    <string name="SHP_NAME">smart_agriculture</string>
    <string name="COOKIE">cookie</string>
    <string name="TYPE">type</string>
    <string name="ISFIRST">is_first</string>



    <string name="top_bg_description" >首页上部图片</string>
    <string name="logo_description">智慧农业平台</string>
    <string name="search_description">搜索地块</string>
    <string name="search_product">搜索产品</string>
    <string name="search_maillist">搜索通讯录人员</string>
    <string name="search_chat">搜索我的群</string>
    <string name="search">搜索结果</string>
    <string name="search_message">请输入搜索内容</string>
    <string name="search_bg_description">searchBg</string>
    <string name="weather_description">天气</string>
    <string name="stock_description">库存汇总</string>
    <string name="notice_description">系统通知</string>
    <string name="retrospectname">追溯</string>
    <string name="warning_message">预警消息</string>
    <string name="warning_details">预警详情</string>
    <string name="monitor_equipment">在线监控设备</string>
    <string name="equipment_warning">设备预警：%d</string>
    <string name="farming_warning">农事预警：%d</string>
    <string name="air_temperature">空气温度：%d</string>
    <string name="air_humidity">空气湿度：%d</string>
    <string name="soil_tension">土壤张力：%d</string>
    <string name="more">更多</string>
    <string name="area">种植面积：%1$s 亩</string>
    <string name="crop">作物：%s</string>
    <string name="address">章丘</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="send">发送</string>
    <string name="input_msg">请输入聊天内容</string>
    <string name="create_chat">创建群聊</string>
    <string name="sorry_nomessage">抱歉，没有发现相关内容</string>
    <string name="replace_word">换个关键词试试吧</string>
    <string name="history_search">历史搜索</string>
    <string name="revise_pwd">修改密码</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="problem">常见问题</string>
    <string name="setting">系统设置</string>
    <string name="update">版本升级</string>
    <string name="exit">退出登录</string>
    <string name="sure_exit">确定退出登录吗？</string>
    <string name="all_day">全部</string>
    <string name="search_park">请输入搜索地块</string>
    <string name="maillist">个人</string>
    <string name="group_person">群成员</string>
    <string name="chat_group">群聊</string>
    <string name="no_net">当前无网络</string>
    <string name="chat_dialog_title">群名称:</string>
    <string name="create">创建</string>
    <string name="weather_city">城市：%1$s</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="after_tomorrow">后天</string>
    <string name="token">Authorization</string>
    <string name="selete_time">请选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="phone_num">手机号：%s</string>
    <string name="input_feedback">请填写您的意见</string>
    <string name="submit">立刻提交</string>
</resources>
