<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main"
        android:checked="true"
        android:icon="@drawable/bottom_navigation_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/bottom_navigation_chat"
        android:title="@string/chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_attendance"
        android:icon="@drawable/bottom_navigation_attendance"
        android:title="@string/attendance"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_distribution"
        android:icon="@drawable/bottom_navigation_distribution"
        android:title="@string/distribution"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_mine"
        android:icon="@drawable/bottom_navigation_mine"
        android:title="@string/mine"
        app:showAsAction="always" />

</menu>