<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/close_iv"
        android:layout_width="@dimen/mm_48"
        android:layout_height="@dimen/mm_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close_blue_iv" />

    <View
        android:id="@+id/view8"
        android:layout_width="0mm"
        android:layout_height="0mm"
        android:background="@drawable/exit_iv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/close_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_iv" />

    <TextView
        android:id="@+id/textView129"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/title_color"
        android:textSize="@dimen/mm_30"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView130"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mm_20"
        android:text="@string/sure_exit"
        android:textColor="@color/title_gray"
        android:textSize="@dimen/mm_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView129" />

    <Button
        android:id="@+id/sure_button"
        android:layout_width="wrap_content"
        android:paddingStart="@dimen/mm_100"
        android:paddingEnd="@dimen/mm_100"
        android:paddingTop="@dimen/mm_20"
        android:paddingBottom="@dimen/mm_20"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mm_40"
        android:background="@drawable/cycle_green"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="@dimen/mm_30"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>