<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".fragment.SearchFragment">

        <include
            android:id="@+id/include5"
            layout="@layout/title_item_two"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0mm"
            android:layout_height="@dimen/mm_60"
            android:layout_marginTop="@dimen/mm_20"
            android:background="@drawable/cycle_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/mm_5"
            app:layout_constraintEnd_toStartOf="@+id/textView45"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toBottomOf="@id/include5">

            <ImageView
                android:id="@+id/search_iv"
                android:layout_width="@dimen/mm_30"
                android:layout_height="@dimen/mm_30"
                android:layout_marginStart="@dimen/mm_10"
                android:contentDescription="@string/search_description"
                app:srcCompat="@mipmap/search_iv_black" />

            <EditText
                android:id="@+id/search_tv"
                android:layout_width="0mm"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/mm_10"
                android:background="@null"
                android:hint="@string/search_message"
                android:textColor="@color/title_gray"
                android:textCursorDrawable="@drawable/textcursor"
                android:textSize="@dimen/mm_28" />

            <ImageView
                android:id="@+id/imageView15"
                android:paddingEnd="@dimen/mm_20"
                android:layout_width="@dimen/mm_48"
                android:layout_height="match_parent"
                android:src="@mipmap/close_iv" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="@dimen/mm_100"
            android:layout_height="@dimen/mm_100"
            android:gravity="center"
            android:text="取消"
            android:textColor="@color/gray"
            android:textSize="@dimen/mm_28"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/guideline42"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="@dimen/mm_100"
            android:layout_height="@dimen/mm_100"
            android:layout_marginTop="@dimen/mm_100"
            android:src="@mipmap/search_iv"
            app:layout_constraintEnd_toStartOf="@+id/guideline42"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mm_87"
            android:text="@string/sorry_nomessage"
            android:textColor="@color/title_gray"
            android:textSize="@dimen/mm_28"
            app:layout_constraintEnd_toStartOf="@+id/guideline42"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toBottomOf="@+id/imageView21" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mm_20"
            android:text="@string/replace_word"
            android:textColor="@color/color_hint"
            android:textSize="@dimen/mm_23"
            app:layout_constraintEnd_toStartOf="@+id/guideline42"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toBottomOf="@+id/textView48" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mm_40"
            android:text="@string/history_search"
            android:textColor="@color/color_hint"
            android:textSize="@dimen/mm_25"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

        <com.example.common.FlowLayout
            android:id="@+id/flowlayout"
            android:layout_width="0mm"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline42"
            app:layout_constraintStart_toStartOf="@+id/guideline41"
            app:layout_constraintTop_toBottomOf="@id/textView50" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>